# orunla

./: .gitignore  API_REFERENCE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GRAPH_EXTRACTION_HANDOFF.md  LICENSE  MARKETING_FEATURES.md  OVERVIEW.md  README-MAC.md  README-WINDOWS.md  README.md  THIRD_PARTY_NOTICES.md  benchmark_cases.json  orunla-spec.md  package-lock.json  package.json  package_release.ps1
.github/workflows/: build.yml
Orunla_v0.1.1_bundle/macOS/orunla-mac-x86_64/: README-MAC.md  launch_orunla.sh
Orunla_v0.1.1_bundle/windows/: README-WINDOWS.md
Orunla_v0.1.1_bundle/windows/documentation/: API_REFERENCE.md
docs/: AI_SETUP.md  API_REFERENCE.md  CLI.md  DEVELOPER.md  LICENSE  MCP.md  OVERVIEW.md
relay/: Dockerfile  package-lock.json  package.json  railway.toml
relay/drizzle/: 0000_init.sql
relay/src/: index.ts  types.ts
src/: lib.rs  main.rs  mcp.rs  mcp_server.rs  relay_client.rs  unified_server.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/benchmark/: metrics.rs  mod.rs
src/cli/: mod.rs
src/extractor/: gliner.rs  hybrid.rs  mod.rs  patterns.rs  tokenizer.rs
src/forgetting/: mod.rs  strength.rs
src/graph/: edge.rs  mod.rs  node.rs
src/licensing/: mod.rs  store.rs  tier.rs  validator.rs
src/retriever/: mod.rs  search.rs
src/server/: mod.rs
src/storage/: mod.rs  sqlite.rs
src/sync/: changelog.rs  client.rs  encryption.rs  mod.rs  synced_store.rs
src/utils/: document.rs  mod.rs  model_downloader.rs  query.rs
ui/: index.html  main.js
(+12 files in other folders)
